Fix previous issues

--- a/client/password-manager-client/src/index.css
+++ b/client/password-manager-client/src/index.css
@@ -42,3 +42,7 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.centered {
+  transform: translate(-50%, -50%);
+}
